--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".Library.LibraryFragment">
 
@@ -11,8 +11,8 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryDark"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/info_text"
@@ -26,38 +26,97 @@
             android:textStyle="bold" />
 
         <LinearLayout
+            android:id="@+id/search_bar_bookshelf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:background="@color/colorPrimary">
+            android:background="@color/colorPrimary"
+            android:orientation="horizontal">
 
             <TextView
+                style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/TextAppearance.AppCompat.Body1"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_15dp"
                 android:text="Search book:"
                 android:textColor="@color/colorPrimaryLight"
                 android:textSize="18dp"
-                android:textStyle="bold"
-                android:layout_gravity="center_vertical"
-                android:layout_marginStart="@dimen/margin_15dp"/>
+                android:textStyle="bold" />
 
             <SearchView
                 android:id="@+id/search_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/margin_15dp"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:iconifiedByDefault="false"
-                android:searchIcon="@null"
                 android:queryHint="@string/search_book"
-                android:layout_marginEnd="@dimen/margin_15dp"
+                android:searchIcon="@null"
                 app:queryBackground="@color/colorPrimaryLight"
                 app:theme="@style/AppSearchView" />
         </LinearLayout>
 
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/any_book_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_margin="@dimen/margin_15dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/any_book_text"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/any_book_yet"
+            android:textAlignment="center" />
+
+        <ImageButton
+            android:layout_width="250dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_15dp"
+            android:background="@color/colorBlank"
+            android:scaleType="centerInside"
+            android:src="@drawable/empty11" />
+
+        <LinearLayout
+            android:id="@+id/discover_layout"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="@dimen/margin_10dp"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/margin_15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="@dimen/margin_15dp"
+                android:layout_marginBottom="@dimen/margin_5dp"
+                card_view:cardBackgroundColor="@color/colorPrimary"
+                card_view:cardCornerRadius="4dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/discover_link"
+                    android:textColor="@color/icons" />
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -70,63 +129,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/any_book_layout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:orientation="vertical"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/any_book_text"
-                    style="@style/TextAppearance.AppCompat.Body1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginEnd="@dimen/margin_15dp"
-                    android:layout_marginTop="10dp"
-                    android:text="@string/any_book_yet"
-                    android:textColor="@color/primaryText" />
-
-            </LinearLayout>
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewGenres"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:layout_marginStart="@dimen/margin_15dp"
-                android:layout_marginEnd="@dimen/margin_15dp"/>
-
-            <LinearLayout
-                android:id="@+id/discover_layout"
-                android:layout_width="match_parent"
-                android:layout_height="55dp"
-                android:orientation="vertical"
-                android:layout_marginTop="@dimen/margin_10dp">
-
-                <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                    android:id="@+id/card_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginStart="@dimen/margin_15dp"
-                    android:layout_marginEnd="@dimen/margin_15dp"
-                    android:layout_marginBottom="@dimen/margin_5dp"
-                    card_view:cardBackgroundColor="@color/colorPrimary"
-                    card_view:cardCornerRadius="4dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical|center_horizontal"
-                        android:gravity="center_horizontal|center_vertical"
-                        android:text="@string/discover_link"
-                        android:textColor="@color/icons" />
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="@dimen/margin_15dp" />
 
             <LinearLayout
                 android:id="@+id/empty_layout"
