--- a/app/src/main/res/layout/fragment_reading.xml
+++ b/app/src/main/res/layout/fragment_reading.xml
@@ -10,8 +10,8 @@
         android:id="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/colorPrimaryDark">
+        android:background="@color/colorPrimaryDark"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/info_text"
@@ -28,180 +28,152 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/any_book_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:layout_margin="@dimen/margin_15dp"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/any_book_text"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:text="@string/any_book_yet"
+            android:textAlignment="center" />
+
+        <ImageButton
+            android:layout_width="250dp"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:layout_margin="@dimen/margin_15dp"
+            android:background="@color/colorBlank"
+            android:scaleType="centerInside"
+            android:src="@drawable/empty11" />
+
+        <LinearLayout
+            android:id="@+id/discover_layout"
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_marginTop="@dimen/margin_10dp"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="@dimen/margin_15dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="@dimen/margin_15dp"
+                android:layout_marginBottom="@dimen/margin_5dp"
+                card_view:cardBackgroundColor="@color/colorPrimary"
+                card_view:cardCornerRadius="4dp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|center_horizontal"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="@string/discover_link"
+                    android:textColor="@color/icons" />
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+    </LinearLayout>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <LinearLayout
+            android:id="@+id/contentReading"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_marginStart="@dimen/margin_15dp"
-            android:layout_marginEnd="@dimen/margin_15dp">
+            android:layout_marginEnd="@dimen/margin_15dp"
+            android:orientation="vertical">
 
-                <LinearLayout
-                    android:id="@+id/any_book_layout"
+            <LinearLayout
+                android:id="@+id/reading_text_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/reading_text"
+                    style="@style/TextAppearance.AppCompat.Body1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|center_vertical"
-                    android:orientation="vertical"
-                    android:visibility="gone">
+                    android:layout_marginTop="15dp"
+                    android:text="@string/reading_text_title"
+                    android:textColor="@color/primaryText"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/any_book_text"
-                        style="@style/TextAppearance.AppCompat.Body1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginTop="5dp"
-                        android:text="@string/any_book_yet" />
-
-                </LinearLayout>
-      
-                <LinearLayout
-                    android:id="@+id/reading_text_layout"
+                <androidx.slidingpanelayout.widget.SlidingPaneLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/reading_text"
-                        style="@style/TextAppearance.AppCompat.Body1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="@string/reading_text_title"
-                        android:textColor="@color/primaryText"
-                        android:textSize="25sp"
-                        android:textStyle="bold" />
-
-                    <androidx.slidingpanelayout.widget.SlidingPaneLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="5dp"
-                        android:background="@color/divider"
-                        android:gravity="center_horizontal" />
-
-                </LinearLayout>
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/reading_books_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"/>
-
-                <LinearLayout
-                    android:id="@+id/pending_text_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/pending_text"
-                        style="@style/TextAppearance.AppCompat.Body1"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="15dp"
-                        android:text="@string/pending"
-                        android:textColor="@color/primaryText"
-                        android:textSize="25sp"
-                        android:textStyle="bold" />
-
-                    <androidx.slidingpanelayout.widget.SlidingPaneLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginTop="5dp"
-                        android:background="@color/divider"
-                        android:gravity="center_horizontal" />
-
-                </LinearLayout>
-
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/pending_books_recycler_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="15dp"/>
-
-                <LinearLayout
-                    android:id="@+id/discover_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                        android:id="@+id/card_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginTop="15dp"
-                        android:layout_marginBottom="5dp"
-                        card_view:cardBackgroundColor="@color/colorPrimary"
-                        card_view:cardCornerRadius="4dp">
-
-                        <!--<TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical|center_horizontal"
-                            android:gravity="center_horizontal|center_vertical"
-                            android:text="@string/discover_link"
-                            android:textColor="@color/icons" />-->
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical">
-
-                            <LinearLayout
-                                android:id="@+id/any_book_layout"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical"
-                                android:layout_gravity="center_horizontal|center_vertical"
-                                android:visibility="invisible">
-
-                                <TextView
-                                    android:id="@+id/any_book_text"
-                                    style="@style/TextAppearance.AppCompat.Body1"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:gravity="center_horizontal"
-                                    android:layout_marginStart="5dp"
-                                    android:layout_marginTop="5dp"
-                                    android:text="@string/any_book_yet"
-                                    />
-
-                                <ImageView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="400dp"
-                                    android:gravity="center_horizontal"
-                                    android:src="@drawable/empty11"/>
-
-                            </LinearLayout>
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical|center_horizontal"
-                                android:gravity="center_horizontal|center_vertical"
-                                android:text="@string/discover_link"
-                                android:textColor="@color/colorBlueLink" />
-
-                        </LinearLayout>
-
-                    </androidx.cardview.widget.CardView>
-
-                </LinearLayout>
-
-
-                <LinearLayout
-                    android:id="@+id/empty_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
-                    android:orientation="vertical" />
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/divider"
+                    android:gravity="center_horizontal" />
 
             </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/reading_books_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp" />
+
+            <LinearLayout
+                android:id="@+id/pending_text_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/pending_text"
+                    style="@style/TextAppearance.AppCompat.Body1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="@string/pending"
+                    android:textColor="@color/primaryText"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <androidx.slidingpanelayout.widget.SlidingPaneLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="5dp"
+                    android:background="@color/divider"
+                    android:gravity="center_horizontal" />
+
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/pending_books_recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp" />
+
+            <LinearLayout
+                android:id="@+id/empty_layout"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:orientation="vertical" />
+
+        </LinearLayout>
 
     </ScrollView>
 
