--- a/app/src/main/res/layout/horizontal_book_recycler_view.xml
+++ b/app/src/main/res/layout/horizontal_book_recycler_view.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="120dp"
-    android:layout_height="200dp"
-    android:layout_marginTop="5dp"
-    android:layout_marginEnd="10dp"
+    android:layout_width="130dp"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="@dimen/margin_10dp"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -12,12 +11,12 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true">
 
-        <RelativeLayout
+        <ImageView
             android:id="@+id/image_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            android:background="@drawable/lib1" />
+            android:src="@drawable/lib1"
+            android:scaleType="fitXY"/>
 
         <ImageButton
             android:id="@+id/add_button"
@@ -29,51 +28,13 @@
             android:contentDescription="@string/imageview_adapter_text"
             android:src="@drawable/ic_add_book" />
 
-        <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_button"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:src="@drawable/ic_add_book"
-            app:backgroundTint="@color/cardview_light_background"
-            />-->
-
-
-        <!--<FloatingActionButton
-            android:id="@+id/add_button"
-            android:layout_alignParentEnd="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add_book"
-            android:scaleType="center"
-            />-->
-
-        <!--<com.rey.material.widget.FloatingActionButton
-            android:id="@+id/add_button"
-            android:layout_alignParentEnd="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:fab_radius="15dp"
-            app:fab_iconSrc="@drawable/ic_add_book"
-            />-->
-        <!-- app:fab_animDuration="@android:integer/config_mediumAnimTime"
-            app:fab_interpolator="@android:anim/decelerate_interpolator"-->
-
-        <!--<ImageView
-            android:layout_marginTop="10dp"
-            android:id="@+id/coverImageView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:src="@drawable/lib1"/>-->
-
     </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/coverView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:backgroundTint="@color/cardview_light_background"
+        android:backgroundTint="@color/colorPrimaryLight"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal"
         android:visibility="invisible">
@@ -84,22 +45,8 @@
             android:layout_gravity="center_vertical|center_horizontal"
             android:gravity="center_horizontal|center_vertical"
             android:text="@string/discover_link"
-            android:textColor="@color/colorBlueLink" />
+            android:textColor="@color/primaryText" />
 
     </LinearLayout>
-
-    <!--<View
-        android:id="@+id/coverView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/cardview_light_background"
-        android:visibility="invisible"/>-->
-
-    <!--TextView
-        android:id="@+id/tvAnimalName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:visibility="invisible"/-->
 
 </RelativeLayout>
