--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -110,19 +110,19 @@
             android:id="@+id/discover_layout"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:layout_marginTop="@dimen/margin_10dp"
             android:orientation="vertical">
 
             <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/card_view"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginStart="@dimen/margin_15dp"
+                android:layout_marginStart="30dp"
                 android:layout_marginTop="15dp"
-                android:layout_marginEnd="@dimen/margin_15dp"
+                android:layout_marginEnd="30dp"
                 android:layout_marginBottom="@dimen/margin_5dp"
                 card_view:cardBackgroundColor="@color/colorPrimary"
-                card_view:cardCornerRadius="4dp">
+                card_view:cardCornerRadius="4dp"
+                android:layout_gravity="center">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -131,6 +131,7 @@
                     android:gravity="center_horizontal|center_vertical"
                     android:text="@string/discover_link"
                     android:textColor="@color/icons" />
+
             </androidx.cardview.widget.CardView>
 
         </LinearLayout>
