--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -265,6 +265,7 @@
                                     android:textSize="16sp" />
 
                                 <TextView
+                                    android:id="@+id/extension_number"
                                     style="@style/TextAppearance.AppCompat.Title"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -319,6 +320,7 @@
                             android:orientation="horizontal">
 
                             <TextView
+                                android:id="@+id/ratings_average"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="@string/rate_example"
