--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -227,6 +227,8 @@
                                     android:textSize="22sp" />
 
                                 <TextView
+                                    android:visibility="invisible"
+                                    android:id="@+id/publication_day"
                                     style="@style/TextAppearance.AppCompat.Body1"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -344,6 +346,7 @@
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/book_summary_text_view"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:gravity="start"
