--- a/app/src/main/res/layout/book_list_item.xml
+++ b/app/src/main/res/layout/book_list_item.xml
@@ -30,7 +30,7 @@
         <LinearLayout
             android:layout_gravity="center_vertical"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:orientation="vertical">
 
             <TextView
@@ -40,7 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:padding="5dp"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+                android:text="title"/>
 
             <TextView
                 style="@style/TextAppearance.AppCompat.Body1"
@@ -48,7 +49,8 @@
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
                 android:padding="5dp"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:text="author"/>
         </LinearLayout>
 
         <LinearLayout
