--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -214,6 +214,7 @@
                                     android:textSize="16sp" />
 
                                 <TextView
+                                    android:id="@+id/commentsNumber"
                                     style="@style/TextAppearance.AppCompat.Title"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
