--- a/app/src/main/res/layout/book_grid_item.xml
+++ b/app/src/main/res/layout/book_grid_item.xml
@@ -14,12 +14,13 @@
         android:layout_height="match_parent"
         android:layout_centerHorizontal="true">
 
-        <RelativeLayout
+        <ImageView
             android:layout_marginTop="5dp"
             android:id="@+id/image_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/lib1"/>
+            android:background="@drawable/noimage"
+            android:scaleType="fitXY"/>
 
         <ImageButton
             android:layout_width="20dp"
